# german-cities

./: .gitignore  README.md
db-seeder/: README.md  main.py  main_db.py  pyproject.toml
web-app/: package-lock.json  package.json  tailwind.config.ts
web-app/src/: app.css  app.html
web-app/src/lib/: types.ts
web-app/src/lib/assets/: cities.json
web-app/src/lib/components/: footer.svelte  header.svelte  search.svelte
web-app/src/lib/components/map/: Leaflet.svelte
web-app/src/lib/components/ui/button/: button.svelte
web-app/src/lib/components/ui/input/: input.svelte
web-app/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +page.ts
web-app/src/routes/api/cities/: +server.ts
