[tool.poetry]
name = "db-seeder"
version = "0.1.0"
description = ""
authors = ["fjlein <fjlein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
requests = "^2.32.3"
requests-cache = "^1.2.1"
libsql-experimental = "^0.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
